--- a/client/src/styles/SignUp.css
+++ b/client/src/styles/SignUp.css
@@ -5,6 +5,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     text-align: center;
+    margin-top: 200px;
   }
   
   .signup-container input {
